--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,8 +64,8 @@ jobs:
         # Build a docker container and push it to ECR 
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY/$CONTAINER_IMAGE ./php-redis
         echo "Pushing image to ECR..."
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY/$CONTAINER_IMAGE
-        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY/$CONTAINER_IMAGE"
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY/$IMAGE_TAG
+        echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
           
  
