--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,15 +68,14 @@ jobs:
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
           
- 
-    # Set image tag in kustomization
+    
 
     - name: Set image tag
       run: |
           cd deploy
           echo $ECR_REPOSITORY
           echo $$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG          
-          kustomize edit set image=$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG
+          kustomize edit set image $CONTAINER_IMAGE
 
           cat kustomization.yaml
           
@@ -85,6 +84,7 @@ jobs:
       run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
+        git add .
         git commit -m "$ECR_REPOSITORY:$IMAGE_TAG" -a
     - name: Push changes
       uses: ad-m/github-push-action@master
