--- a/deploy/kustomization.yaml
+++ b/deploy/kustomization.yaml
@@ -11,11 +11,9 @@ resources:
 images:
 - name: 139286777794.dkr.ecr.eu-north-1.amazonaws.com/gitops
   newTag: 809f684ea5e9bb72b9b507a01cc23b72b6a62948
-- name: 457472006214.dkr.ecr.us-west-1.amazonaws.com/guestbook
-  newTag: d6cbdc0df33ef5f5dce803931e4d89031865223b
 - name: frontend
-  newName: guestbook
-  newTag: 3fa38b9d2acb82a6e567c5935d1037a1339e4f1d
+  newName: 139286777794.dkr.ecr.eu-north-1.amazonaws.com/gitops
+  newTag: 809f684ea5e9bb72b9b507a01cc23b72b6a62948
 - name: guestbook
   newName: gitops
-  newTag: 809f684ea5e9bb72b9b507a01cc23b72b6a62948
+  newTag: new
