--- a/deploy/frontend-deployment.yaml
+++ b/deploy/frontend-deployment.yaml
@@ -19,7 +19,7 @@ spec:
     spec:
       containers:
       - name: php-redis
-        image: 457472006214.dkr.ecr.us-west-1.amazonaws.com/guestbook:23d38b9ffa3019fb4e1630af6041364ef52719aa
+        image: 139286777794.dkr.ecr.eu-north-1.amazonaws.com/gitops:809f684ea5e9bb72b9b507a01cc23b72b6a62948 
         # update image value with the image URI of the container registry  
         resources:
           requests:
