--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
           cd deploy
           echo $ECR_REPOSITORY
           echo $$AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY:$IMAGE_TAG          
-          kustomize edit set image $CONTAINER_IMAGE
+          kustomize edit set image "guestbook=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
 
           cat kustomization.yaml
           
