--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Set image tag
       run: |
           cd deploy
-          kustomize edit set image "frontend=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+          kustomize edit set image frontend=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
           cat kustomization.yaml
           
