--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Set image tag
       run: |
           cd deploy
-          kustomize edit set image $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$ECR_REPOSITORY
+          kustomize edit set image ECR_REGISTRY/$ECR_REPOSITORY=ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG 
 
           cat kustomization.yaml
           
