--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
     - name: Set image tag
       run: |
           cd deploy
-          kustomize edit set image=$ECR_REPOSITORY $IMAGE_TAG 
+          kustomize edit set image guestbook=$ECR_REPOSITORY$IMAGE_TAG 
 
           cat kustomization.yaml
           
