--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,7 +65,10 @@ jobs:
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./php-redis
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-        
+        cd deploy
+        kustomize edit set image $ECR_REGISTRY/$ECR_REPOSITORY=$ECR_REPOSITORY:$IMAGE_TAG 
+
+        cat kustomization.yaml
        
 
           
@@ -74,9 +77,9 @@ jobs:
     - name: Set image tag
       run: |
           cd deploy
-          kustomize edit set image $ECR_REGISTRY/$ECR_REPOSITORY=$ECR_REPOSITORY:$IMAGE_TAG 
+#          kustomize edit set image $ECR_REGISTRY/$ECR_REPOSITORY=$ECR_REPOSITORY:$IMAGE_TAG 
 
-          cat kustomization.yaml
+ #         cat kustomization.yaml
           
       
     - name: Commit files
